# dads80th

./: .gitignore  .mcp.json  .nojekyll  CLAUDE.md  DATA_MANAGEMENT.md  GREG-do-this.md  README.md  SESSION_CLOSEOUT.md  Vic-Cicconetti-—-This-Is-Your-Life.tex  WORKSTREAMS.md  _quarto.yml  backlog.md  index.html  index.qmd  pyproject.toml  search.json
.github/: pull_request_template.md
appendices/: correct-the-record.html  correct-the-record.qmd  family-tree.html  family-tree.qmd  lifemap.html  lifemap.qmd  timeline.html  timeline.qmd
chapters/: ch01-roots.html  ch01-roots.qmd  ch02-service.html  ch02-service.qmd  ch03-yvonne.html  ch03-yvonne.qmd  ch04-education.html  ch04-education.qmd  ch05-entrepreneur.html  ch05-entrepreneur.qmd  ch06-veterans.html  ch06-veterans.qmd  ch07-family.html  ch07-family.qmd  ch08-golden-years.html  ch08-golden-years.qmd  ch09-voices.html  ch09-voices.qmd  ch10-happy-80th.html  ch10-happy-80th.qmd
contributions/: README.md  children.md  extended-family.md  grandchildren.md  veterans-and-friends.md  vic-and-yvonne.md
css/: tribute.css
dads80th-pics/: 2021-10-09_15-02-47_451.heic  2021-10-09_18-22-59_952.heic
data/: addresses.json  family.json
docs/: chirolanza-research.md  elia-immigration-research.md  extended-family.md  gmail-intel.md  immigration-research.md  original-brief.md  product-vision.md  timeline.csv  victor.md  web-research-contacts.md  web-research-gregs-colleagues.md  yvonne.md
exports/: google-form-fact-check.js  google-form-tribute.js  work-pm-kit.md
includes/: jukebox.html  lifemap.html  sidebar-media.html  (+1 more)
(+13 files in other folders)
