[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dads80th"
version = "0.1.0"
description = "Victor Cicconetti 80th birthday content and family dossier"
requires-python = ">=3.11"
dependencies = [
    "graphviz",
    "jinja2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
